# myLTetris

./: .gitignore  Makefile  PR_DESCRIPTION.md  README.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  main.py  myLTetris.py  pyproject.toml  run_tests.py  test_import.py  verification_results.txt  verify_game.py  verify_refactoring.py
.todo/: 1-REFACTOR.md
tests/: __init__.py  test_block.py  test_game.py  test_piece.py  test_runner.py
tetris/: __init__.py  block.py  constants.py  game.py  piece.py  runner.py
