[project]
name = "myLTetris"
version = "1.0.0"
description = "A classic Tetris game implementation in Python using Pygame"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame>=2.0.0",
]
authors = [
    {name = "myLTetris Developer"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Puzzle Games",
]

[project.scripts]
myLTetris = "myLTetris:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]